# obk

./: .gitignore  .zipignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/: release-drafter.yml
.github/workflows/: ci-cd.yml  ci-cd.yml.exclude  ci.yml  commitlint.yml  pypi-cd.yml  release-drafter.yml
articles/: branch-protection-in-github.md  changelog-automation-for-python.md  eda-in-python.md  sqlite-in-python-guide.md  unit-testing-with-di.md
articles/active/: task-template-for-codex-agents.md
articles/completed/: gsl-prompt-template.md  prompt-vs-directive.md
articles/doing/: adhoc-task-template-for-codex-agents.md  gsl-implementation-limitations.md  main-branch-pypi-cd-scaffold.md  packaging-obk-for-chatgpt-5.md  prompt-template-for-codex-agents.md  publish-a-package-to-pypi.md  unique-pypi-cd-scaffold.md
articles/done/2025/08/: grit-structured-language-gsl.md  new-gsl-elements-and-capabilities.md  prompt-vs-task-part-2.md
articles/todo/: 01. automate-pyproject-toml-version.md  03. sqlite-in-python-guide.md  06. publish-a-package-to-pypi.md
directives/07/29/: do-unit-tests.md
prompts/07/27/: 20250727T094740-0400.md
prompts/07/28/: 20250728T141621-0400.md
prompts/07/29/: 20250729T145215-0400.md  20250729T185556-0400.md
prompts/07/30/: 20250730T062755-0400.md  20250730T104022-0400.md  20250730T160316-0400.md
prompts/07/31/: 20250731T185109-0400.md
prompts/2025/07/27/: 20250727T094740-0400.md
prompts/2025/07/28/: 20250728T141621-0400.md
prompts/2025/07/29/: 20250729T145215-0400.md  20250729T185556-0400.md
prompts/2025/07/30/: 20250730T062755-0400.md  20250730T104022-0400.md  20250730T160316-0400.md
prompts/2025/07/31/: 20250731T185109-0400.md
prompts/2025/08/01/: 20250801T153742+0000.md  20250802T024329+0000.md
prompts/2025/08/02/: 20250802T024329+0000.md
prompts/2025/08/04/: 20250804T004020+0000.md  20250804T014131+0000.md
prompts/2025/08/09/: 20250809T142525+0000.md  20250809T193452+0000.md  20250809T225012+0000.md
scripts/: build-and-vendor.ps1  make-zip.ps1  package.ps1  update_agents_md.py
src/obk/: __init__.py  cli.py  harmonize.py  services.py  validation.py
src/obk/xsd/: prompt.xsd
tasks/in-use/: task-readme.md
tests/: test_cli.py  test_generate_prompt.py  test_project_path.py  test_prompt_features.py  test_sample.py
(+4 files in other folders)
