[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "obk-cli"
version = "0.1.0"
description = "A scalable hello-world CLI starter."
authors = [{ name = "Your Name", email = "you@example.com" }]
readme = "README.md"
requires-python = ">=3.9"

dependencies = ["typer[all]>=0.12"]

[project.scripts]
obk = "obk.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/obk"]

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "ruff",
  "black",
]

[project.optional-dependencies]
test = [
    "pytest >=7.0.0",
    "pytest-cov >=4.0.0",
    "pytest-mock >=3.10.0",
    "python-dotenv >=1.0.0",
]
